--- a/templates/base.html
+++ b/templates/base.html
@@ -7,12 +7,17 @@
 	<!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">-->
 	<link rel="stylesheet" type="text/css" href="{% static "css/bootstrap.min.css" %}">
 	<link rel="stylesheet" type="text/css" href="{% static "css/bootstrap-theme.min.css" %}">
+
+	<link rel="stylesheet" type="text/css" href="{% static "js/jquery-ui.min.css" %}">
+	<link rel="stylesheet" type="text/css" href="{% static "js/jquery-ui.structure.min.css" %}">
+	<link rel="stylesheet" type="text/css" href="{% static "js/jquery-ui.theme.min.css" %}">
 	<link rel="stylesheet" type="text/css" href="{% static "css/imd-styles.css" %}">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+	<script type="text/javascript" src="{% static "js/jquery.min.js" %}"></script>
 </head>
 <body>
 	{% block header_index %}{% endblock %}
-	<nav class="navbar navbar-inverse">
+	<nav class="navbar navbar-inverse navbar-static-top navbar-fixed-top">
 		<div class="container-fluid">
 			<div class="navbar-header">
 				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navigation" aria-expanded="false">
@@ -21,33 +26,70 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
+				<a href="{% url 'index' %}">
+					<img src="{% static "images/crown.png"  %}" class="logo-nav">
+				</a>
 			</div>
 			<div id="navigation" class="collapse navbar-collapse">
-				<ul class="nav navbar-nav">
+				<ul class="nav navbar-nav navbar-left">
 					<li><a href="{% url 'index' %}">Home</a></li>
-					<li><a href="{% url 'services' %}">Services</a></li>
-					<li><a href="">Gallery</a></li>
+					<li><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Services <span class="caret"></span></a>
+						<ul class="dropdown-menu">
+							<li><a href="{% url 'services' %}">All Services</a></li>
+							<li><a href="{% url 'vehicle_wraps' %}">Vehicle Wraps</a></li>
+							<li><a href="{% url 'tradeshows' %}">Tradeshows</a></li>
+							<li><a href="{% url 'web_design' %}">Web Design</a></li>
+							<li><a href="{% url 'design_service' %}">Design Service</a></li>
+							<li><a href="{% url 'signs_banners' %}">Signs &amp; Banners</a></li>
+							<li><a href="{% url 'printing' %}">Printing</a></li>
+							<li><a href="{% url 'photography' %}">Photography</a></li>
+							<li><a href="{% url 'window_wall_floor' %}">Windows / Wall / Floor</a></li>
+						</ul>
+					
+					</li>
+					<li><a href="{% url 'gallery' %}">Gallery</a></li>
 					<li><a href="{% url 'contact' %}">Contact Us</a></li>
+					
 				</ul>
-				<p class="navbar-text navbar-right">
-					<a href="https://facebook.com" target="blank"><span class="fa fa-facebook"></span></a> | 
-					<a href=""><span class="fa fa-twitter"></span></a> | 
-					<a href=""><span class="fa fa-instagram"></span></a> | 
-					<a href=""><span class="fa fa-yelp"></span></a> 
-				</p>
+				<ul class="nav navbar-nav navbar-right">
+					<p class="navbar-text">
+						<a href="https://www.facebook.com/imdsandiego" target="blank"><span class="fa fa-facebook facebook"></span></a> | 
+						<a href="https://twitter.com/imdsandiego" target="blank"><span class="fa fa-twitter twitter"></span></a> | 
+						<a href="https://www.instagram.com/imdsandiego/" target="blank"><span class="fa fa-instagram instagram"></span></a> | 
+						<a href="http://www.yelp.com/biz/imd-national-city" target="blank"><span class="fa fa-yelp yelp"></span></a>
+					</p>
+				</ul>
 			</div>
 		</div>
 	</nav>
-		<h1>{% block title %}Welcome{% endblock %}</h1>
 		{% block content %}
 
 		{% endblock %}
-	<footer>
+	<footer class="footer">
 		<div class="row">
-			
+			<div class="col-md-10 col-md-offset-1">
+				<div class="row">
+					<div class="col-md-3">
+						<h4>Address</h4>
+						<address>133 Highland Ave Ste. A-1<br>National City, CA 91950</address>
+						<span class="fa fa-phone"></span> <a href="tel: 619 677 4477">(619) 677-4477</a>
+					</div>
+					<div class="col-md-3">
+						FACEBOOK
+					</div>
+					<div class="col-md-3">
+						INSTAGRAM
+					</div>
+					<div class="col-md-3">
+						flicker
+					</div>
+				</div>
+			</div>
 		</div>
 	</footer>
-	<script type="text/javascript" src="{% static "js/jquery.min.js" %}"></script>
+	<div class="copyright">
+		<h5>&copy; 2016 | IMD-SD</h5>
+	</div>
 	<script type="text/javascript" src="{% static "js/bootstrap.min.js" %}"></script>
 	<script type="text/javascript" src="{% static "js/prefixfree.min.js" %}"></script>
 	<script type="text/javascript" src="{% static "js/script.js" %}"></script>
